--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,19 +1,30 @@
 name: Package
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: Packaging of ${{  github.ref_name }} 📦
 on: [push]
 jobs:
   Prepare-Package:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - name: Prepare package using makefile
+
+      - name: Build package
         run: |
-          cd ${{ github.workspace }} && make
+          cd ${{ github.workspace }} && make all_but_package
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: VSCode-portable
-          path: Portable-VSCode-linux-x64.zip
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          name: Portable-VSCode-linux-x64
+          path: ${{ github.workspace }}/VSCode-linux-x64
+
+      - name: Create new release for ${{ github.ref }} 🚀
+        uses: ncipollo/release-action@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          artifacts: ${{ github.workspace }}/VSCode-linux-x64
+          bodyFile: "manifest.md"
+
+      - run: echo "💡 This job's status is ${{ job.status }}."
