--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -18,7 +18,7 @@ jobs:
         uses: ncipollo/release-action@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          artifacts: ${{ github.workspace }}/Portable-VSCode-linux-x64.zip
+          artifacts: ${{ github.workspace }}/Portable-VSCode-linux-x64.zip, ${{ github.workspace }}/install.sh
           bodyFile: "manifest.md"
 
       - run: echo "💡 This job's status is ${{ job.status }}."
