add a desktop entry

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ vscode.tar.gz
 Portable-VSCode-linux-x64
 Portable-VSCode-linux-x64.zip
 manifest.md
+visual-studio-code-icons.zip
+visual-studio-code-icons/
